--- a/sbin/nvmecontrol/Makefile
+++ b/sbin/nvmecontrol/Makefile
@@ -3,7 +3,7 @@
 PACKAGE=runtime
 PROG=	nvmecontrol
 SRCS=	nvmecontrol.c devlist.c firmware.c format.c identify.c identify_ext.c logpage.c \
-	perftest.c reset.c ns.c nvme_util.c power.c nc_util.c wdc.c
+	perftest.c reset.c ns.c nvme_util.c power.c nc_util.c wdc.c aws.c
 MAN=	nvmecontrol.8
 
 .PATH:	${SRCTOP}/sys/dev/nvme
